--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,14 @@
                             <h2 class="post-title"><%= post.title %></h2>
                         </header>
                         <p class="post-body"><%= post.content %></p>
+                        <% if (post.id) { %>
+                            <div class="detail-actions">
+                                <a class="btn btn-ghost" href="/posts/<%= post.id %>">See in Detail</a>
+                                <form class="inline-form" action="/posts/<%= post.id %>?_method=DELETE" method="POST">
+                                    <button class="btn" type="submit">Delete</button>
+                                </form>
+                            </div>
+                        <% } %>
                     </article>
                 <% } %>
             <% } else { %>
@@ -29,6 +37,4 @@
     </main>
 </body>
 </html>
-
-
 
